--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/genai": "^0.1.1",
+    "@google/genai": "latest"
     "react-markdown": "^9.0.1",
     "firebase": "^10.8.0",
     "lucide-react": "^0.344.0"
